@@ -10,7 +10,7 @@ typedef struct {
 	server *srv;
 	int     ok;
 	array  *all_configs;
-	array  *configs_stack; /* to parse nested block */
+	vector_config_weak configs_stack; /* to parse nested block */
 	data_config *current; /* current started with { */
 	buffer *basedir;
 } config_t;
