@@ -43,6 +43,7 @@ NEWS
   * [core] truncate pidfile on exit (fixes #2695)
   * consistent inclusion of config.h at top of files (fixes #2073)
   * [core] add generic vector implementation
+  * [core] replace array weakref with vector
 
 - 1.4.39 - 2016-01-02
   * [core] fix memset_s call (fixes #2698)
